--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-source-shopify": "^6.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
+    "i18next": "^22.5.0",
     "isomorphic-fetch": "^3.0.0",
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^12.3.1",
     "react-icons": "^4.1.0",
     "shopify-buy": "^2.11.0",
     "urql": "^2.0.2"
