--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@sindresorhus/slugify": "^1.1.0",
+    "@splidejs/react-splide": "^0.7.12",
     "debounce": "^1.2.1",
     "dotenv": "^10.0.0",
     "gatsby": "^4.19.0",
