--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^12.3.1",
     "react-icons": "^4.1.0",
+    "sharp": "^0.32.1",
     "shopify-buy": "^2.11.0",
     "urql": "^2.0.2"
   },
