--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-source-filesystem": "^4.25.0",
     "gatsby-source-shopify": "^6.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
+    "hamburger-react": "^2.5.0",
     "i18next": "^22.5.0",
     "isomorphic-fetch": "^3.0.0",
     "lodash.debounce": "^4.0.8",
