--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "gatsby-plugin-netlify": "^5.1.0",
     "gatsby-plugin-postcss": "^5.24.0",
     "postcss": "^8.4.17",
     "tailwindcss": "^3.1.8"
