--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-gatsby-cloud": "^4.0.0",
     "gatsby-plugin-google-analytics": "^4.0.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-google-fonts-with-attributes": "^1.0.8",
     "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-image": "^2.25.0",
     "gatsby-plugin-sharp": "^4.0.0",
