wip - configuring custom plugin

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-icons": "^4.1.0",
     "sharp": "^0.32.1",
     "shopify-buy": "^2.11.0",
-    "urql": "^2.0.2"
+    "urql": "^2.0.2",
+    "gatsby-source-shopify-translations": "file:../packages/gatsby-source-shopify-translations"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
