update translations package location to github

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "gatsby-plugin-sitemap": "^5.0.0",
     "gatsby-source-filesystem": "^4.25.0",
     "gatsby-source-shopify": "^6.0.0",
-    "gatsby-source-shopify-translations": "^0.4.1",
+    "gatsby-source-shopify-translations": "github:KevinBritten/gatsby-source-shopify-translations#build",
     "gatsby-transformer-sharp": "^4.0.0",
     "hamburger-react": "^2.5.0",
     "i18next": "^22.5.0",
